manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlight-cooler-credit
  namespace: starlight-cooler-credit
  labels:
    app: starlight-cooler-credit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starlight-cooler-credit
  template:
    metadata:
      labels:
        app: starlight-cooler-credit
    spec:
      containers:
        - name: starlight-cooler-credit
          image: "trueberryless/starlight-cooler-credit:main-b0bd086321e93c37dcc708eb0c93ce9a6dd849f4"
          imagePullPolicy: Always
