manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starlight-plugin-show-latest-version
  namespace: starlight-plugin-show-latest-version
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: starlight-plugin-show-latest-version
  ports:
    - name: http
      port: 80
