manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-plugin-show-latest-version
  namespace: starlight-plugin-show-latest-version
spec:
  rules:
    - host: starlight-plugin-show-latest-version.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-plugin-show-latest-version
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-plugin-show-latest-version.trueberryless.org
      secretName: starlight-plugin-show-latest-version
